--- a/INTEX.HTML
+++ b/INTEX.HTML
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Você decide</title>
-    <link rel="stylesheet" href="STYLE.CSS">
+    <title>Você Decide</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <script src="MEN.JS"></script>
+    <main>
+        <div class="caixa-principal">
+            <h1 class="titulo"> Isso é um título </h1>
+            <div class="caixa-perguntas"></div>
+            <div class="caixa-alternativas"></div>
+            <div class="caixa-resultados">
+                <p class="texto-resultado"></p>
+            </div>
+        </div>
+    </main>
+    <script src="main.js"></script>
 </body>
+
 </html>
